# libwdi-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: msbuild.yml
examples/: rerun_as_admin.rs  simple.rs
libwdi-sys/: Cargo.toml  build.rs
src/: core.rs  enums.rs  lib.rs  misc.rs
