[package]
name = "libwdi"
version = "0.1.0"
edition = "2021"
authors = ["Jędrzej Boczar <jedrzej.boczar@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust bindings to libwdi: Windows USB Driver Installation library"
repository = "https://github.com/jedrzejboczar/libwdi-rs"
keywords = ["libwdi", "usb", "driver", "winusb"]
categories = ["api-bindings", "os"]

[dependencies]
libwdi-sys = { path = "./libwdi-sys", version = "0.1" }
thiserror = "1.0"

[dev-dependencies.windows]
version = "0.46"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]
