[package]
name = "libwdi-sys"
version = "0.1.2"
edition = "2021"
authors = ["Jędrzej Boczar <jedrzej.boczar@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust bindings to libwdi: Windows USB Driver Installation library"
repository = "https://github.com/jedrzejboczar/libwdi-rs"
keywords = ["libwdi", "usb", "driver", "winusb"]
categories = ["external-ffi-bindings", "os"]

[build-dependencies]
bindgen = "0.64"
